# PayD

./: .env.example  CONTRACT_VERSION_METADATA_IMPLEMENTATION.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DATEPAL_ACCESSIBILITY_GUIDE.md  DATEPAL_QUICK_REFERENCE.md  DEPLOYMENT_GUIDE_CLOUD.md  DEPLOYMENT_GUIDE_METADATA.md  ENVIRONMENT_SETUP.md  FIX_PROPOSAL.md  IMPLEMENTATION_SUMMARY.md  MERGE_VERIFICATION.md  PERFORMANCE_BONUS_IMPLEMENTATION.md  README.md  issue.md  package-lock.json  package.json  pr.md
.github/: pull_request_template.md
.github/workflows/: build.yml
backend/: .env.example  PERFORMANCE_BONUS_FEATURE.md  README.md  jest.config.cjs  jest.config.js  jest.setup.ts  openapi.json  package-lock.json  package.json
backend/docs/: API_VERSIONING.md  WEBHOOK_RETRY_BACKOFF.md
backend/src/: app.ts  index.ts
contracts/: metadata.test.rs
contracts/asset_path_payment/: Cargo.toml
contracts/asset_path_payment/src/: test.rs
contracts/shared/: metadata.rs
docs/: API_AUTHENTICATION_FLOW.md  CONTRACT_ARCHIVAL_STRATEGY.md  DEPLOYMENT_GUIDE_VERCEL_RENDER.md  FX_RATE_FETCHING_LOGIC.md  LOCAL_CONTRACT_BOOTSTRAP.md
docs/issues/: 086-archival-strategy.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: local_contract_bootstrap.py
src/pages/: PayrollScheduler.tsx
tests/: auth-flow-docs.test.mjs  credits-docs.test.mjs  filenaming-guide-docs.test.mjs  fx-rate-docs.test.mjs  license-docs.test.mjs  local-contract-bootstrap.test.mjs  pull-request-template.test.mjs  readme-badges.test.mjs
(+176 files in other folders)
